--- a/index.html
+++ b/index.html
@@ -153,9 +153,11 @@
         </tr>
         <tr>
           <td colspan="3">
+            <!-- Start Parent Table 2 -->
             <table align="center" border="0">
               <tr>
                 <td>
+                  <!-- Start Table (4) -->
                   <table border="1 solid" cellspacing="0" cellpadding="10">
                     <caption>
                       Table (4)
@@ -176,6 +178,7 @@
                             <tr>
                               <td>
                                 <tr>
+                                  <!-- Start Table (5) -->
                                   <table border="1 solid" cellspacing="0">
                                     <caption>
                                       Table (5)
@@ -207,6 +210,7 @@
                                       </tr>
                                     </tbody>
                                   </table>
+                                  <!-- End Table (4) -->
                                 </tr>
                               </td>
                             </tr>
@@ -215,9 +219,11 @@
                       </tbody>
                     </tr>
                   </table>
+                  <!-- End Table (4) -->
                 </td>
               </tr>
             </table>
+            <!-- End Parent Table 2 -->
           </td>
         </tr>
       </tbody>
